--- a/src/app/layout/list-user-fabricants/list-user-fabricants.component.html
+++ b/src/app/layout/list-user-fabricants/list-user-fabricants.component.html
@@ -1,5 +1,5 @@
 <div class="container pt-5">
-    <app-page-header [heading]="'Liste des fabricants'" [icon]="'fa-table'"></app-page-header>
+    <app-page-header [heading]="'Gestion des admnistrateur fabricants'" [icon]="'fa-table'"></app-page-header>
     <div class="row">
         <div class="col col-xl-12 col-lg-12">
             <div class="card mb-3">
