update list des utilisateurs fabricants vue

--- a/src/app/layout/list-fabricants/create-fabriquant-dialog/create-fabriquant-dialog.component.html
+++ b/src/app/layout/list-fabricants/create-fabriquant-dialog/create-fabriquant-dialog.component.html
@@ -1,5 +1,9 @@
   <div class="container-dialog">
-    <h2 mat-dialog-title>Créer Fabricant</h2>
+    <h2 mat-dialog-title>
+      Créer Fabricant
+      <div class="underline"></div>
+    </h2>
+
     <mat-dialog-content class="mat-typography">
       <form [formGroup]="firstFormGroup">
         <div class="d-flex flex-column">
