--- a/src/app/layout/list-fabricants/list-fabricants.component.html
+++ b/src/app/layout/list-fabricants/list-fabricants.component.html
@@ -50,7 +50,7 @@
                       <ng-container matColumnDef="logo">
                         <th mat-header-cell *matHeaderCellDef> Logo </th>
                         <td mat-cell *matCellDef="let element">
-                            <img src="{{element.logo}}" class="icon-logo">
+                            <img src="{{ROOT_URL}}/{{element.logo}}" class="icon-logo">
                          </td>
                       </ng-container>
 
