--- a/src/app/layout/list-fabricants/update-fabriquat-dialog/update-fabriquat-dialog.component.scss
+++ b/src/app/layout/list-fabricants/update-fabriquat-dialog/update-fabriquat-dialog.component.scss
@@ -1,3 +1,8 @@
 .container-dialog{
-  width: 500px;
+  width: 100%;
+  height: 100%;
+}
+.underline{
+  border-bottom: solid 2px #FFAB00;
+  width: 100px;
 }
