revue sidebar links

--- a/src/app/layout/list-fabricants/list-fabricants.component.html
+++ b/src/app/layout/list-fabricants/list-fabricants.component.html
@@ -76,6 +76,12 @@
                           <button class="mx-2" mat-icon-button color="accent" (click) = "onDisplayAdminPage(element.id)">
                             <mat-icon><i class="fas fa-user-tie"></i></mat-icon>
                           </button>
+                          <mat-slide-toggle
+                          checked = "true"
+                          color = "primary"
+                            >
+                            activer
+                          </mat-slide-toggle>
                         </td>
                       </ng-container>
 
