add contract component

--- a/src/app/layout/list-fabricants/list-fabricants.component.html
+++ b/src/app/layout/list-fabricants/list-fabricants.component.html
@@ -82,6 +82,9 @@
                             >
                             activer
                           </mat-slide-toggle>
+                          <button class="mx-2" mat-icon-button color="accent" (click) = "onDisplayContract(element.id)">
+                            <mat-icon>assignment</mat-icon>
+                          </button>
                         </td>
                       </ng-container>
 
