update gestion des modeles vue

--- a/src/app/layout/list-modeles/create-version-dialog/create-version-dialog.component.html
+++ b/src/app/layout/list-modeles/create-version-dialog/create-version-dialog.component.html
@@ -1,5 +1,5 @@
   <div class="container-dialog">
-    <h2 mat-dialog-title>Modifier Modele</h2>
+    <h2 mat-dialog-title>Créer version</h2>
     <mat-dialog-content class="mat-typography">
       <form [formGroup]="firstFormGroup">
         <div class="d-flex flex-column">
