--- a/src/app/layout/list-modeles/list-versions/list-versions.component.html
+++ b/src/app/layout/list-modeles/list-versions/list-versions.component.html
@@ -22,60 +22,43 @@
                         <button class="mx-2" mat-raised-button style="background : #FFAB00 ; color : #fff">
                           <mat-icon>print</mat-icon>
                         </button>
-                        <button class="mx-2" mat-raised-button (click) = "onCreateModele()" style="background : #228B22 ; color : #fff">
+                        <button class="mx-2" mat-raised-button (click) = "onCreateVersion()" style="background : #228B22 ; color : #fff">
                           <mat-icon>add</mat-icon>
                         </button>
                       </div>
                     </div>
                 </div>
                 <div class="card-body table-responsive">
-                  <mat-paginator [length]="listModeles.length" [pageSize]="5"
+                  <mat-paginator [length]="listVersions.length" [pageSize]="5"
                     [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
-                    <table mat-table [dataSource]="listModeles" matSort class="mat-elevation-z8" style="width : 100%">
+                    <table mat-table [dataSource]="listVersions" matSort class="mat-elevation-z8" style="width : 100%">
 
                       <ng-container matColumnDef="index">
                         <th mat-header-cell *matHeaderCellDef > No. </th>
                         <td mat-cell *matCellDef="let element; let i = index;"> {{i+1}} </td>
                       </ng-container>
 
-                      <ng-container matColumnDef="model">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Model </th>
+                      <ng-container matColumnDef="version">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Version </th>
                         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
                       </ng-container>
 
-                      <ng-container matColumnDef="photo">
-                        <th mat-header-cell *matHeaderCellDef> Photo </th>
-                        <td mat-cell *matCellDef="let element">
-                            <img src="{{element.photo}}" class="icon-logo" (click) = "zoomOnPhoto(element.photo)">
-                         </td>
-                      </ng-container>
-                      <ng-container matColumnDef="couleurs">
-                        <th mat-header-cell *matHeaderCellDef> Couleurs </th>
+                      <ng-container matColumnDef="options">
+                        <th mat-header-cell *matHeaderCellDef> Options </th>
                         <td mat-cell *matCellDef="let element, let i = index;">
+                          <!-- ce affichage est temporaire je vais le modofier -->
                           <mat-form-field>
-                            <mat-label><mat-icon>color_lens</mat-icon> Couleurs disponibles</mat-label>
+                            <mat-label><mat-icon>settings</mat-icon> Options disponibles</mat-label>
                             <mat-select>
-                              <mat-option *ngFor="let color of element.couleurs, let j = index" [value]="color.value">
-                                <mat-icon [style.color] = "color.value">invert_colors</mat-icon> {{color.name}}
-                                <button class="mx-2" mat-icon-button (click)= "onUpdateCouleur(i,j)" style = "float:right">
+                              <mat-option *ngFor="let option of element.options, let j = index" [value]="option.value">
+                                 {{option.name}}
+                                <button class="mx-2" mat-icon-button (click)= "onUpdateOption(i,j)" style = "float:right">
                                   <mat-icon>create</mat-icon>
                                 </button>
                               </mat-option>
                             </mat-select>
                           </mat-form-field>
-                          <button class="mx-2" mat-icon-button (click)= "onCreateCouleur(i)">
-                            <mat-icon>add</mat-icon>
-                          </button>
-                        </td>
-                      </ng-container>
-
-                      <ng-container matColumnDef="versions">
-                        <th mat-header-cell *matHeaderCellDef> Versions </th>
-                        <td mat-cell *matCellDef="let element, let i = index;">
-                          <button class="mx-2" mat-icon-button color="accent" [routerLink] = "[path+i]">
-                            <mat-icon>directions_car</mat-icon>
-                          </button>
-                          <button class="mx-2" mat-icon-button (click)= "onCreateVersion(i)">
+                          <button class="mx-2" mat-icon-button (click)= "onCreateOption(i)">
                             <mat-icon>add</mat-icon>
                           </button>
                         </td>
