update modele vue v2

--- a/src/app/layout/list-modeles/create-attribute-dialog/create-attribute-dialog.component.html
+++ b/src/app/layout/list-modeles/create-attribute-dialog/create-attribute-dialog.component.html
@@ -1,5 +1,6 @@
   <div class="container-dialog">
-    <h2 mat-dialog-title>Modifier Modele</h2>
+    <h2 mat-dialog-title>Créer nouveau attribut</h2>
+    <div class="underline"></div>
     <mat-dialog-content class="mat-typography">
       <form [formGroup]="firstFormGroup">
         <div class="d-flex flex-column">
