--- a/src/app/layout/list-modeles/create-modele-dialog/create-modele-dialog.component.scss
+++ b/src/app/layout/list-modeles/create-modele-dialog/create-modele-dialog.component.scss
@@ -1,3 +1,8 @@
 .container-dialog{
-  width: 500px;
+  width: 100%;
+}
+.underline{
+  border-bottom: solid 2px #FFAB00;
+  width: 100px;
+  margin-bottom: 20px;
 }
