--- a/src/app/layout/list-modeles/create-version-dialog/create-version-dialog.component.html
+++ b/src/app/layout/list-modeles/create-version-dialog/create-version-dialog.component.html
@@ -1,5 +1,6 @@
   <div class="container-dialog">
     <h2 mat-dialog-title>Créer version</h2>
+    <div class="underline"></div>
     <mat-dialog-content class="mat-typography">
       <form [formGroup]="firstFormGroup">
         <div class="d-flex flex-column">
