--- a/src/app/layout/list-modeles/list-modeles.component.html
+++ b/src/app/layout/list-modeles/list-modeles.component.html
@@ -19,10 +19,10 @@
                             <mat-option value="saab">Pays</mat-option>
                           </mat-select>
                         </mat-form-field>
-                        <button class="mx-2" mat-raised-button style="background : #FFAB00 ; color : #fff">
+                        <button matTooltip="Imprimer" class="mx-2" mat-raised-button style="background : #FFAB00 ; color : #fff">
                           <mat-icon>print</mat-icon>
                         </button>
-                        <button class="mx-2" mat-raised-button (click) = "onCreateModele()" style="background : #228B22 ; color : #fff">
+                        <button matTooltip="Créer nouveau modéle" class="mx-2" mat-raised-button (click) = "onCreateModele()" style="background : #228B22 ; color : #fff">
                           <mat-icon>add</mat-icon>
                         </button>
                       </div>
@@ -52,19 +52,9 @@
                       <ng-container matColumnDef="couleurs">
                         <th mat-header-cell *matHeaderCellDef> Couleurs </th>
                         <td mat-cell *matCellDef="let element, let i = index;">
-                          <mat-form-field>
-                            <mat-label><mat-icon>color_lens</mat-icon> Couleurs disponibles</mat-label>
-                            <mat-select>
-                              <mat-option *ngFor="let color of element.couleurs, let j = index" [value]="color.value">
-                                <mat-icon [style.color] = "color.value">invert_colors</mat-icon> {{color.name}}
-                                <button class="mx-2" mat-icon-button (click)= "onUpdateCouleur(i,j)" style = "float:right">
-                                  <mat-icon>create</mat-icon>
-                                </button>
-                              </mat-option>
-                            </mat-select>
-                          </mat-form-field>
-                          <button class="mx-2" mat-icon-button (click)= "onCreateCouleur(i)">
-                            <mat-icon>add</mat-icon>
+                          {{element.couleurs.length}}
+                          <button matTooltip = "Afficher les couleurs" color = "primary" class="mx-2" mat-icon-button (click)= "onDisplayColors(i)">
+                            <mat-icon>color_lens</mat-icon>
                           </button>
                         </td>
                       </ng-container>
@@ -72,24 +62,26 @@
                       <ng-container matColumnDef="versions">
                         <th mat-header-cell *matHeaderCellDef> Versions </th>
                         <td mat-cell *matCellDef="let element, let i = index;">
-                          <button class="mx-2" mat-icon-button color="accent" [routerLink] = "[path+i]">
+                          {{element.versions.length}}
+                          <button matTooltip = "Afficher les versions" class="mx-2" mat-icon-button color="accent" [routerLink] = "[path+i]">
                             <mat-icon>directions_car</mat-icon>
                           </button>
-                          <button class="mx-2" mat-icon-button (click)= "onCreateVersion(i)">
-                            <mat-icon>add</mat-icon>
-                          </button>
+                        </td>
+                      </ng-container>
+
+                      <ng-container matColumnDef="disponibilte">
+                        <th mat-header-cell *matHeaderCellDef> Disponibilté </th>
+                        <td mat-cell *matCellDef="let element, let i = index;">
+                          100 Véhicules
                         </td>
                       </ng-container>
 
                       <ng-container matColumnDef="manipulations">
                         <th mat-header-cell *matHeaderCellDef> Manipulations </th>
                         <td mat-cell *matCellDef="let element, let i = index;">
-                          <mat-slide-toggle
-                          checked = "true"
-                          color = "primary"
-                            >
-                            Disponible
-                          </mat-slide-toggle>
+                          <button matTooltip = "Modifier" class="mx-2" mat-icon-button >
+                            <mat-icon>create</mat-icon>
+                          </button>
                         </td>
                       </ng-container>
 
