--- a/src/app/layout/list-modeles/list-versions/list-versions.component.html
+++ b/src/app/layout/list-modeles/list-versions/list-versions.component.html
@@ -1,5 +1,5 @@
 <div class="container pt-5">
-    <app-page-header [heading]="'Liste des Modeles'" [icon]="'fas fa-car'"></app-page-header>
+    <app-page-header [heading]="'Liste des versions disponibles'" [icon]="'fas fa-car'"></app-page-header>
     <div class="row">
         <div class="col col-xl-12 col-lg-12">
             <div class="card mb-3">
@@ -8,21 +8,30 @@
                       <div class="col-sm-7">
                         <mat-form-field style="width : 100%">
                           <mat-icon matPrefix>search</mat-icon>
-                          <input matInput placeholder="Fabricant..." />
+                          <input matInput placeholder="Version..." />
                         </mat-form-field>
                       </div>
                       <div class="col-sm-5" style = "text-align:right">
                         <mat-form-field>
                           <mat-label>Critéres</mat-label>
                           <mat-select matNativeControl required>
-                            <mat-option value="volvo">Année</mat-option>
-                            <mat-option value="saab">Pays</mat-option>
+                            <mat-option value="volvo">Disponibilité</mat-option>
+                            <mat-option value="saab">Tarif</mat-option>
                           </mat-select>
                         </mat-form-field>
-                        <button class="mx-2" mat-raised-button style="background : #FFAB00 ; color : #fff">
+                        <button
+                        class="mx-2"
+                        mat-raised-button
+                        style="background : #FFAB00 ; color : #fff"
+                        matTooltip="Imprimer">
                           <mat-icon>print</mat-icon>
                         </button>
-                        <button class="mx-2" mat-raised-button (click) = "onCreateVersion()" style="background : #228B22 ; color : #fff">
+                        <button
+                        class="mx-2"
+                        mat-raised-button
+                        (click) = "onCreateVersion()"
+                        style="background : #228B22 ; color : #fff"
+                        matTooltip="Créer nouvelle version">
                           <mat-icon>add</mat-icon>
                         </button>
                       </div>
@@ -31,7 +40,7 @@
                 <div class="card-body table-responsive">
                   <mat-paginator [length]="listVersions.length" [pageSize]="5"
                     [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
-                    <table mat-table [dataSource]="listVersions" matSort class="mat-elevation-z8" style="width : 100%">
+                    <table mat-table [dataSource]="versionsTable" matSort class="mat-elevation-z8" style="width : 100%">
 
                       <ng-container matColumnDef="index">
                         <th mat-header-cell *matHeaderCellDef > No. </th>
@@ -46,33 +55,55 @@
                       <ng-container matColumnDef="options">
                         <th mat-header-cell *matHeaderCellDef> Options </th>
                         <td mat-cell *matCellDef="let element, let i = index;">
-                          <!-- ce affichage est temporaire je vais le modofier -->
-                          <mat-form-field>
-                            <mat-label><mat-icon>settings</mat-icon> Options disponibles</mat-label>
-                            <mat-select>
-                              <mat-option *ngFor="let option of element.options, let j = index" [value]="option.value">
-                                 {{option.name}}
-                                <button class="mx-2" mat-icon-button (click)= "onUpdateOption(i,j)" style = "float:right">
-                                  <mat-icon>create</mat-icon>
-                                </button>
-                              </mat-option>
-                            </mat-select>
-                          </mat-form-field>
-                          <button class="mx-2" mat-icon-button (click)= "onCreateOption(i)">
-                            <mat-icon>add</mat-icon>
+                          <button
+                          class="mx-2"
+                          mat-icon-button
+                          matTooltip="Afficher les options"
+                          (click)= "onDisplayOptions(i)"
+                          color="accent">
+                            <mat-icon>directions_car</mat-icon>
                           </button>
                         </td>
+                      </ng-container>
+
+                      <ng-container matColumnDef="disponibilite">
+                        <th mat-header-cell *matHeaderCellDef> Disponibilité </th>
+                        <td mat-cell *matCellDef="let element">
+                            80 véhicule
+                         </td>
+                      </ng-container>
+
+                      <ng-container matColumnDef="prix">
+                        <th mat-header-cell *matHeaderCellDef> Prix de base </th>
+                        <td mat-cell *matCellDef="let element">
+                            500.000.000 DA
+                         </td>
                       </ng-container>
 
                       <ng-container matColumnDef="manipulations">
                         <th mat-header-cell *matHeaderCellDef> Manipulations </th>
                         <td mat-cell *matCellDef="let element, let i = index;">
-                          <mat-slide-toggle
-                          checked = "true"
+                          <button
                           color = "primary"
-                            >
-                            Disponible
-                          </mat-slide-toggle>
+                          class="mx-2"
+                          mat-icon-button
+                          matTooltip="Dupliquer" >
+                            <mat-icon>file_copy</mat-icon>
+                          </button>
+                          <button
+                          color = "primary"
+                          class="mx-2"
+                          mat-icon-button
+                          matTooltip="Modifier" >
+                            <mat-icon>create</mat-icon>
+                          </button>
+                          <button
+                          color = "primary"
+                          class="mx-2"
+                          mat-icon-button
+                          matTooltip="Archiver" >
+                            <mat-icon>archive</mat-icon>
+                          </button>
                         </td>
                       </ng-container>
 
