--- a/src/app/shared/delete-confirm-dialog/delete-confirm-dialog.component.html
+++ b/src/app/shared/delete-confirm-dialog/delete-confirm-dialog.component.html
@@ -2,7 +2,7 @@
   <div>
     <h2 mat-dialog-title>Confirmer</h2>
     <mat-dialog-content class="mat-typography">
-      Voulez-vous confirmer cet action ?
+      Voulez-vous {{data.message}}?
     </mat-dialog-content>
     <mat-dialog-actions align="end">
       <button mat-raised-button (click)="onConfirm()" color = "primary">Confirmer</button>
