fix deply issues

--- a/src/app/layout/list-modeles/list-colors-dialog/list-colors-dialog.component.html
+++ b/src/app/layout/list-modeles/list-colors-dialog/list-colors-dialog.component.html
@@ -1,7 +1,7 @@
   <div class="container-dialog">
     <h2 mat-dialog-title>
       Couleurs disponibles
-      <button matTooltip="Créer nouvelle couleur" class="mx-2" mat-raised-button (click)= "onCreateCouleur(i)" style="float : right; background : #228B22 ; color : #fff">
+      <button matTooltip="Créer nouvelle couleur" class="mx-2" mat-raised-button (click)= "onCreateCouleur()" style="float : right; background : #228B22 ; color : #fff">
         <mat-icon>add</mat-icon>
       </button>
     </h2>
