create new theme

--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
         <mat-card-header>
           <div mat-card-avatar class="example-header-image"></div>
           <mat-card-title>{{fullName}}</mat-card-title>
-          <mat-card-subtitle><mat-icon style="color : #FFAB00"><i class="fas fa-award"></i></mat-icon> {{type}}</mat-card-subtitle>
+          <mat-card-subtitle><mat-icon color= "primary"><i class="fas fa-award"></i></mat-icon> {{type}}</mat-card-subtitle>
         </mat-card-header>
       </mat-card>
       <mat-accordion>
