add modeles and version vues

--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -1,6 +1,14 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+.box-shadow{
+  position: fixed;
+  z-index: 5;
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
+.body-bcg{
+  background-color: #FFFFFF;
+}
 .example-container {
    top: 64px !important;
   }
