--- a/src/app/shared/zoom-image-dialog/zoom-image-dialog.component.scss
+++ b/src/app/shared/zoom-image-dialog/zoom-image-dialog.component.scss
@@ -1,4 +1,9 @@
 .dialog{
   height: 100%;
-  width: 100%;
+  width: 700px;
+}
+.underline{
+  border-bottom: solid 2px #FA5F1A;
+  margin-bottom: 20px;
+  display: inline-block;
 }
