--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -5,24 +5,10 @@
         <button mat-menu-item class="a-item" href="#">Something else here</button>
       </mat-menu>
 
-      <button mat-button [matMenuTriggerFor]="notificationMenu" class="a-item">
+      <button mat-icon-button [matMenuTriggerFor]="notificationMenu" class="a-item">
          <mat-icon matBadge="8" matBadgePosition="before" matBadgeColor="accent">notification_important</mat-icon>
      </button>
-      <mat-menu #appMenu="matMenu">
-        <button mat-menu-item class="a-item" routerLink="profile">
-          <i class="fa fa-fw fa-user"></i> Profile
-        </button>
-        <button mat-menu-item class="a-item" href="javascript:void(0)">
-          <i class="fa fa-fw fa-envelope"></i> Messages
-        </button>
-        <button mat-menu-item class="a-item" href="javascript:void(0)">
-          <i class="fas fa-cogs"></i> Paramètres
-        </button>
-        <button mat-menu-item class="a-item"  (click)="logout()">
-          <i class="fa fa-fw fa-power-off"></i>Déconnexion
-        </button>
-      </mat-menu>
-      <button mat-button [matMenuTriggerFor]="appMenu" class="a-item">
-        <mat-icon >home</mat-icon>
-      </button>
+    <button mat-icon-button class="a-item" (click)="logout()">
+        <mat-icon><i class="fa fa-fw fa-power-off"></i></mat-icon>
+    </button>
 </div>
