--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,15 +1,15 @@
 <div class="container-fluid px-0" style="overflow-x: hidden;" >
-  <mat-toolbar color = "primary">
+  <mat-toolbar color = "primary" class="box-shadow">
       <button mat-icon-button (click)="snav.toggle()"><i class="fas fa-bars fa-2x"></i></button>
       <a class="navbar-brand mx-5" href="#" style="color:#fff">SayaraDZ</a>
       <span class="example-spacer"></span>
-      <app-header [loading] = loading></app-header>
+      <app-header></app-header>
   </mat-toolbar>
-  <mat-sidenav-container class="example-container" fullscreen>
-    <mat-sidenav #snav>
+  <mat-sidenav-container class="example-container" fullscreen autosize>
+    <mat-sidenav #snav mode="side" opened>
         <app-sidebar></app-sidebar>
     </mat-sidenav>
-    <mat-sidenav-content>
+    <mat-sidenav-content class="body-bcg">
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
