--- a/src/app/layout/list-modeles/create-version-dialog/create-version-dialog.component.html
+++ b/src/app/layout/list-modeles/create-version-dialog/create-version-dialog.component.html
@@ -1,49 +1,88 @@
   <div class="container-dialog">
-    <h2 mat-dialog-title>Créer version</h2>
-    <div class="underline"></div>
+    <h2 mat-dialog-title class = "underline">Créer version</h2>
     <mat-dialog-content class="mat-typography">
       <form [formGroup]="firstFormGroup">
         <div class="d-flex flex-column">
           <div class="d-flex flex-column">
             <h5>Créer un nouvelle version :</h5>
-            <mat-form-field>
+            <mat-form-field appearance="outline" style="width : 100%">
+              <mat-label> Introduire le nom </mat-label>
               <input formControlName="nameVersion" matInput placeholder="Nom de la version" />
             </mat-form-field>
-            <h6>Veuillez introduire la liste des options compatibles avec cette version : </h6>
             <div class="row">
-              <div class="col-sm-5">
-                <mat-form-field>
-                  <input formControlName="name" matInput placeholder="Nom de l'attribut" />
-                </mat-form-field>
+              <div class="col-sm-6">
+                <h6>Veuillez introduire la liste des couleurs de cette version : </h6>
+                <div class="row">
+                  <div class="col-sm-10">
+                    <mat-form-field appearance="outline" style="width : 100%">
+                      <mat-label> Créer une couleur</mat-label>
+                      <mat-select formControlName="nameColor">
+                       <mat-option *ngFor="let color of colorsList" [value]="color.name">
+                         <span>{{color.name}}</span>
+                       </mat-option>
+                      </mat-select>
+                    </mat-form-field>
+                  </div>
+
+                  <div class="col-sm-2">
+                    <button matTooltip="Ajouter une couleur" mat-icon-button color="primary" (click) = "onCreateColor()">
+                      <mat-icon>add</mat-icon>
+                    </button>
+                  </div>
+                </div>
+                <mat-list>
+                  <h3 mat-subheader>Couleurs</h3>
+                  <mat-list-item *ngFor="let color of colors, let i =index">
+                    <mat-icon mat-list-icon style="color : #228B22">check_circle</mat-icon>
+                    <h4 mat-line>{{color.name}}</h4>
+                    <p mat-line> {{color.value}} </p>
+                    <button mat-icon-button color="warn" (click) = "onDeleteColor(i)">
+                      <mat-icon>delete</mat-icon>
+                    </button>
+                  </mat-list-item>
+                </mat-list>
               </div>
-              <div class="col-sm-5">
-                <mat-form-field>
-                  <input formControlName="value" matInput placeholder="La valeur de l'attribut" />
-                </mat-form-field>
-              </div>
-              <div class="col-sm-2">
-                <button mat-icon-button color="primary" (click) = "onCreateOption()">
-                  <mat-icon>add</mat-icon>
-                </button>
+              <div class="col-sm-6">
+                <h6>Veuillez introduire la liste des options de cette version : </h6>
+                <div class="row">
+                  <div class="col-sm-10">
+                    <mat-form-field appearance="outline" style="width : 100%">
+                      <mat-label> Créer une option</mat-label>
+                      <mat-select formControlName="name">
+                       <mat-option *ngFor="let option of optionsList" [value]="option.name">
+                         <span>{{option.name}}</span>
+                       </mat-option>
+                    </mat-select>
+                   </mat-form-field>
+                  </div>
+
+                  <div class="col-sm-2">
+                    <button matTooltip="Ajouter une option" mat-icon-button color="primary" (click) = "onCreateOption()">
+                      <mat-icon>add</mat-icon>
+                    </button>
+                  </div>
+                </div>
+                <mat-list>
+                  <h3 mat-subheader>Options</h3>
+                  <mat-list-item *ngFor="let option of options, let i =index">
+                    <mat-icon mat-list-icon style="color : #228B22">check_circle</mat-icon>
+                    <h4 mat-line>{{option.name}}</h4>
+                    <p mat-line> {{option.value}} </p>
+                    <button mat-icon-button color="warn" (click) = "onDeleteOption(i)">
+                      <mat-icon>delete</mat-icon>
+                    </button>
+                  </mat-list-item>
+                </mat-list>
               </div>
             </div>
-            <mat-list>
-              <h3 mat-subheader>Options</h3>
-              <mat-list-item *ngFor="let option of options, let i =index">
-                <mat-icon mat-list-icon style="color : #228B22">check_circle</mat-icon>
-                <h4 mat-line>{{option.name}}</h4>
-                <p mat-line> {{option.value}} </p>
-                <button mat-icon-button color="warn" (click) = "onDeleteOption(i)">
-                  <mat-icon>delete</mat-icon>
-                </button>
-              </mat-list-item>
-            </mat-list>
+
+
           </div>
         </div>
       </form>
     </mat-dialog-content>
     <mat-dialog-actions align="end">
       <button mat-raised-button  color = "primary" (click) = "onConfirm()">Confirmer</button>
-      <button mat-raised-button mat-dialog-close color = "warn">Annuler</button>
+      <button mat-raised-button mat-dialog-close color = "accent">Annuler</button>
     </mat-dialog-actions>
   </div>
