--- a/src/app/layout/list-modeles/create-version-dialog/create-version-dialog.component.scss
+++ b/src/app/layout/list-modeles/create-version-dialog/create-version-dialog.component.scss
@@ -2,7 +2,7 @@
   width: 100%;
 }
 .underline{
-  border-bottom: solid 2px #FFAB00;
-  width: 100px;
+  border-bottom: solid 2px #FA5F1A;
   margin-bottom: 20px;
+  display: inline-block;
 }
