--- a/src/app/layout/list-modeles/list-modeles.component.html
+++ b/src/app/layout/list-modeles/list-modeles.component.html
@@ -1,5 +1,5 @@
 <div class="container pt-5">
-    <app-page-header [heading]="'Liste des Modeles'" [icon]="'fas fa-car'"></app-page-header>
+    <app-page-header [heading]="titleView" [icon]="'fas fa-car'"></app-page-header>
     <div class="d-flex justify-content-center">
         <mat-spinner  class="mt-5" [hidden]="!loading"></mat-spinner>
     </div>
@@ -9,7 +9,7 @@
                 <div class="card-header">
                     <div class="row">
                       <div class="col-sm-8">
-                        <mat-form-field appearance="outline" style="width : 100%">
+                        <mat-form-field appearance="outline" style="width : 100%;">
                           <mat-label> Chercher un modéle</mat-label>
                           <input matInput placeholder="entrez un mot clé">
                           <mat-icon matPrefix>search</mat-icon>
@@ -23,7 +23,7 @@
                           <mat-icon>add</mat-icon>
                         </button>
                         <button matTooltip = "Charger un fichier de stock" class="mx-2" mat-icon-button color="primary">
-                          <mat-icon>cloud_download</mat-icon>
+                          <mat-icon>cloud_upload</mat-icon>
                         </button>
                       </div>
                     </div>
@@ -31,11 +31,6 @@
                 <div class="card-body table-responsive">
                   <app-notification class="ma-2" [error] = "error"></app-notification>
                     <table id="my-table" mat-table [dataSource]="tabModels" matSort class="mat-elevation-z8" style="width : 100%">
-
-                      <ng-container matColumnDef="index">
-                        <th mat-header-cell *matHeaderCellDef > No. </th>
-                        <td mat-cell *matCellDef="let element; let i = index;"> {{i+1}} </td>
-                      </ng-container>
 
                       <ng-container matColumnDef="model">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Model </th>
@@ -45,7 +40,7 @@
                       <ng-container matColumnDef="photo">
                         <th mat-header-cell *matHeaderCellDef> Photo </th>
                         <td mat-cell *matCellDef="let element">
-                            <img src="https://sayaradz2.herokuapp.com{{element.images[0]}}" class="icon-logo" (click) = "zoomOnPhoto(element.images[0])">
+                            <img src="{{ROOT_URL + element.images[0]}}" class="icon-logo" (click) = "zoomOnPhoto(element.images)">
                          </td>
                       </ng-container>
                       <ng-container matColumnDef="couleurs">
@@ -61,16 +56,19 @@
                       <ng-container matColumnDef="versions">
                         <th mat-header-cell *matHeaderCellDef> Versions </th>
                         <td mat-cell *matCellDef="let element, let i = index;">
-                          <button matTooltip = "Afficher les versions" class="mx-2" mat-icon-button color="primary" [routerLink] = "[path+i]">
+                          <button matTooltip = "Afficher les versions" class="mx-2" mat-icon-button color="primary" [routerLink] = "[path+element.id]">
                             <mat-icon>directions_car</mat-icon>
                           </button>
                         </td>
                       </ng-container>
 
-                      <ng-container matColumnDef="disponibilte">
-                        <th mat-header-cell *matHeaderCellDef> Disponibilté </th>
+                      <ng-container matColumnDef="options">
+                        <th mat-header-cell *matHeaderCellDef> Options </th>
                         <td mat-cell *matCellDef="let element, let i = index;">
-                          -- Véhicules
+                          {{element.options.length}}
+                          <button matTooltip = "Afficher les options" class="mx-2" mat-icon-button color="primary" (click)= "onDisplayOptions(element.id,element.options)">
+                            <mat-icon>settings</mat-icon>
+                          </button>
                         </td>
                       </ng-container>
 
@@ -80,8 +78,8 @@
                           <button matTooltip = "Modifier" class="mx-2" mat-icon-button color="accent" (click) = "onUpdateModel(element.id,element.name,element.images[0])">
                             <mat-icon>create</mat-icon>
                           </button>
-                          <button matTooltip = "Télécharger la fiche téchnique" class="mx-2" mat-icon-button color="accent">
-                            <mat-icon>cloud_download</mat-icon>
+                          <button matTooltip = "Supprimer" class="mx-2" mat-icon-button color="warn" (click) = "onDeleteModel(element.id,i)">
+                            <mat-icon>delete</mat-icon>
                           </button>
                         </td>
                       </ng-container>
