--- a/src/app/layout/list-modeles/list-options-dialog/list-options-dialog.component.html
+++ b/src/app/layout/list-modeles/list-options-dialog/list-options-dialog.component.html
@@ -1,14 +1,11 @@
   <div class="container-dialog">
-    <h2 mat-dialog-title>
+    <h2 mat-dialog-title class="underline">
       Options disponibles
-      <button class="mx-2" mat-raised-button (click)= "onCreateOption()" style="float : right; background : #228B22 ; color : #fff">
-        <mat-icon>add</mat-icon>
-      </button>
     </h2>
-    <div class="underline"></div>
+    <button matTooltip="Créer nouvelle option" class="mx-2" mat-icon-button (click)= "onCreateOption()" color = "primary" style="float : right;">
+      <mat-icon>add</mat-icon>
+    </button>
     <mat-dialog-content class="mat-typography">
-      <mat-paginator [length]="options.length" [pageSize]="5"
-        [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
       <table mat-table [dataSource]="optionsTable" matSort class="mat-elevation-z8" style="width : 100%">
 
         <ng-container matColumnDef="index">
@@ -21,22 +18,25 @@
           <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="valeur">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Valeur </th>
-          <td mat-cell *matCellDef="let element"> {{element.value}} </td>
+        <ng-container matColumnDef="aperçu">
+          <th mat-header-cell *matHeaderCellDef> Aperçu </th>
+          <td mat-cell *matCellDef="let element">
+              <mat-icon>settings</mat-icon>
+              {{element.values}}
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="tarif">
-          <th mat-header-cell *matHeaderCellDef> Prix </th>
+          <th mat-header-cell *matHeaderCellDef> Tarif </th>
           <td mat-cell *matCellDef="let element, let i = index;">
-            {{i*400}} DA
+            {{i}}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="manipulations">
           <th mat-header-cell *matHeaderCellDef> Manipulations </th>
           <td mat-cell *matCellDef="let element, let i = index;">
-            <button class="mx-2" mat-icon-button (click)= "onUpdateoption(i)">
+            <button class="mx-2" mat-icon-button (click)= "onUpdateOption(i)">
               <mat-icon>create</mat-icon>
             </button>
           </td>
@@ -47,6 +47,7 @@
       </table>
     </mat-dialog-content>
     <mat-dialog-actions align="end">
-      <button mat-raised-button mat-dialog-close color = "primary">OK</button>
+      <button matTooltip="Enregisterer les modification" mat-raised-button  color = "primary" (click) = "onClose()">OK</button>
+      <button matTooltip="Annuler" mat-raised-button color = "accent" (click) = "onCancel()">Annuler</button>
     </mat-dialog-actions>
   </div>
