--- a/src/app/layout/list-modeles/list-options-dialog/list-options-dialog.component.scss
+++ b/src/app/layout/list-modeles/list-options-dialog/list-options-dialog.component.scss
@@ -9,11 +9,11 @@
   object-fit: cover;
 }
 .underline{
-  border-bottom: solid 2px #FFAB00;
-  width: 100px;
+  border-bottom: solid 2px #FA5F1A;
   margin-bottom: 20px;
+  display: inline-block;
 }
-th,td {
+td, th {
   padding-left: 10px;
   padding-right: 10px;
 }
