--- a/src/app/layout/list-modeles/list-versions/list-versions.component.html
+++ b/src/app/layout/list-modeles/list-versions/list-versions.component.html
@@ -1,46 +1,36 @@
 <div class="container pt-5">
     <app-page-header [heading]="'Liste des versions disponibles'" [icon]="'fas fa-car'"></app-page-header>
-    <div class="row">
+    <div class="d-flex justify-content-center">
+        <mat-spinner  class="mt-5" [hidden]="!loading"></mat-spinner>
+    </div>
+    <div class="row" [hidden]="loading">
         <div class="col col-xl-12 col-lg-12">
             <div class="card mb-3">
                 <div class="card-header">
                     <div class="row">
-                      <div class="col-sm-7">
-                        <mat-form-field style="width : 100%">
+                      <div class="col-sm-8">
+                        <mat-form-field appearance="outline" style="width : 100%">
+                          <mat-label> Chercher une version</mat-label>
+                          <input matInput placeholder="entrez un mot clé">
                           <mat-icon matPrefix>search</mat-icon>
-                          <input matInput placeholder="Version..." />
                         </mat-form-field>
                       </div>
-                      <div class="col-sm-5" style = "text-align:right">
-                        <mat-form-field>
-                          <mat-label>Critéres</mat-label>
-                          <mat-select matNativeControl required>
-                            <mat-option value="volvo">Disponibilité</mat-option>
-                            <mat-option value="saab">Tarif</mat-option>
-                          </mat-select>
-                        </mat-form-field>
-                        <button
-                        class="mx-2"
-                        mat-raised-button
-                        style="background : #FFAB00 ; color : #fff"
-                        matTooltip="Imprimer">
+                      <div class="col-sm-4" style = "text-align:right; padding-top : 20px;">
+                        <button matTooltip="Imprimer" class="mx-2" mat-icon-button color = "primary" (click)= "printVersions()">
                           <mat-icon>print</mat-icon>
                         </button>
-                        <button
-                        class="mx-2"
-                        mat-raised-button
-                        (click) = "onCreateVersion()"
-                        style="background : #228B22 ; color : #fff"
-                        matTooltip="Créer nouvelle version">
+                        <button matTooltip="Créer nouvelle version" class="mx-2" mat-icon-button (click) = "onCreateVersion()" color = "primary">
                           <mat-icon>add</mat-icon>
+                        </button>
+                        <button matTooltip = "Charger un fichier de stock" class="mx-2" mat-icon-button color="primary">
+                          <mat-icon>cloud_upload</mat-icon>
                         </button>
                       </div>
                     </div>
                 </div>
                 <div class="card-body table-responsive">
-                  <mat-paginator [length]="listVersions.length" [pageSize]="5"
-                    [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
-                    <table mat-table [dataSource]="versionsTable" matSort class="mat-elevation-z8" style="width : 100%">
+                  <app-notification class="ma-2" [error] = "error"></app-notification>
+                    <table id="my-table" mat-table [dataSource]="versionsTable" matSort class="mat-elevation-z8" style="width : 100%">
 
                       <ng-container matColumnDef="index">
                         <th mat-header-cell *matHeaderCellDef > No. </th>
@@ -55,41 +45,32 @@
                       <ng-container matColumnDef="options">
                         <th mat-header-cell *matHeaderCellDef> Options </th>
                         <td mat-cell *matCellDef="let element, let i = index;">
+                          {{element.options.length}}
                           <button
                           class="mx-2"
                           mat-icon-button
                           matTooltip="Afficher les options"
-                          (click)= "onDisplayOptions(i)"
+                          (click)= "onDisplayOptions(element.id, element.options)"
                           color="accent">
                             <mat-icon>directions_car</mat-icon>
                           </button>
                         </td>
                       </ng-container>
 
-                      <ng-container matColumnDef="disponibilite">
-                        <th mat-header-cell *matHeaderCellDef> Disponibilité </th>
+                      <ng-container matColumnDef="colors">
+                        <th mat-header-cell *matHeaderCellDef> Couleurs </th>
                         <td mat-cell *matCellDef="let element">
-                            80 véhicule
-                         </td>
-                      </ng-container>
-
-                      <ng-container matColumnDef="prix">
-                        <th mat-header-cell *matHeaderCellDef> Prix de base </th>
-                        <td mat-cell *matCellDef="let element">
-                            500.000.000 DA
+                          {{element.colors.length}}
+                          <button matTooltip = "Afficher les couleurs" color = "primary" class="mx-2" mat-icon-button (click)= "onDisplayColors(element.id,element.colors)">
+                            <mat-icon>color_lens</mat-icon>
+                          </button>
                          </td>
                       </ng-container>
 
                       <ng-container matColumnDef="manipulations">
                         <th mat-header-cell *matHeaderCellDef> Manipulations </th>
                         <td mat-cell *matCellDef="let element, let i = index;">
-                          <button
-                          color = "primary"
-                          class="mx-2"
-                          mat-icon-button
-                          matTooltip="Dupliquer" >
-                            <mat-icon>file_copy</mat-icon>
-                          </button>
+
                           <button
                           color = "primary"
                           class="mx-2"
@@ -97,13 +78,7 @@
                           matTooltip="Modifier" >
                             <mat-icon>create</mat-icon>
                           </button>
-                          <button
-                          color = "primary"
-                          class="mx-2"
-                          mat-icon-button
-                          matTooltip="Archiver" >
-                            <mat-icon>archive</mat-icon>
-                          </button>
+
                         </td>
                       </ng-container>
 
